--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<p>By Divya Kotian.</p>
 
+
+ <h1>This is GitOps Class going on.  </h1>
+
+<p>This is a paragraph in Dev Branch. </p>
+
+<p>we are learning about git Merge </p>
 </body>
 </html>
