--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>My DevOps class by Simplelearn</h1>
 <p>By Divya Kotian.</p>
-
-
- <h1>This is GitOps Class going on.  </h1>
+<h1>This is GitOps Class going on.  </h1>
 
 <p>This is a paragraph in Dev Branch. </p>
 
